# profiling-explorer

./: .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/profiling_explorer/: __main__.py  main.py  settings.py  urls.py  views.py
src/profiling_explorer/management/commands/: runserver.py
src/profiling_explorer/static/: script.js  styles.css
src/profiling_explorer/templates/: _row.html  _rows.html  base.html  callers_callees.html  index.html  rows_page.html
src/profiling_explorer/templatetags/: profiling_explorer_tags.py
tests/: conftest.py  test_main.py  test_views.py  utils.py
