[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
]

[project]
name = "profiling-explorer"
version = "1.0.1"
description = "Table-based exploration tool for Python profiling data (pstats files)."
readme = "README.rst"
keywords = [
  "profiler",
  "profiling",
  "pstats",
]
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Adam Johnson", email = "me@adamj.eu" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "django>=5.2",
]
urls.Changelog = "https://github.com/adamchainz/profiling-explorer/blob/main/CHANGELOG.rst"
urls.Funding = "https://adamj.eu/books/"
urls.Repository = "https://github.com/adamchainz/profiling-explorer"
scripts.profiling-explorer = "profiling_explorer.main:main"

[dependency-groups]
test = [
  "cogapp>=3.6",
  "coverage[toml]>=7.10",
  "pytest",
  "pytest-django",
  "pytest-randomly",
]

[tool.ruff]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
]
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
mypy_path = "src/"
namespace_packages = false
strict = true
warn_unreachable = true
overrides = [ { module = "tests.*", allow_untyped_defs = true } ]

[tool.pytest]
ini_options.addopts = """\
    --strict-config
    --strict-markers
    --ds=profiling_explorer.settings
    """
ini_options.django_find_project = false
ini_options.xfail_strict = true

[tool.coverage]
run.branch = true
run.data_file = ".coverage/cov"
run.parallel = true
run.source = [
  "profiling_explorer",
  "tests",
]
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.show_missing = true
report.skip_covered = true
report.skip_empty = true

[tool.rstcheck]
report_level = "ERROR"
